<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">397503044424687</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb397503044424687</string>

    <!-- Twitter PURPOSE -->
    <string name="twitter_consumer_key" translatable="false">uDZ4aPkEMHLcKMyLmXiw3JgTS</string>
    <string name="twitter_consumer_secret" translatable="false">@string/twitter_Key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="workmate">Workmate</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="call" translatable="false">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="unlike">Like</string>
    <string name="is_eating_at">\t is eating at:\t </string>
    <string name="hasnt_decided_yet">\t hasn\'t decided yet</string>
    <string name="email_not_found">email not found</string>
    <string name="no_name_found">no name found</string>
    <string name="is_joining">\t is joining!</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="map_list_title">I\'m Hungry!</string>
    <string name="workmates_title">Aivailable workmates</string>
    <string name="notification_enable">Alarm set !</string>
    <string name="notification_desable">Alarm Canceled !</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="choice_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_choice_yes">yes</string>
    <string name="popup_message_choice_no">no</string>
    <string name="closing_soon">Closing Soon</string>
    <string name="open_until">Open until\t</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_information">No information</string>
    <string name="notification_your_lunch">Your lunch:</string>
    <string name="with_workmates">Workmate :</string>
    <string name="adress">Adress :</string>
    <string name="no_workmates">No workamtes</string>
    <string name="No_restaurant">No restaurant selected today</string>
    <string name="need_position">The application needs your position</string>
    <string name="loading">loading...</string>
</resources>
