<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant_main"
    android:orientation="vertical"
    android:padding="10dip">



    <ImageView
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:layout_gravity="center"
        android:src="@drawable/logo_restaurant" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Go4Lunch"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />



    <LinearLayout
        android:id="@+id/activity_main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/activity_main_facebook_button"
            style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_with_facebook"
            android:textAlignment="center"/>


        <Button
            android:id="@+id/activity_main_google_button"
            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/sign_in_with_google"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/activity_main_twitter_button"
            style="@style/FirebaseUI.Button.AccountChooser.TwitterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/sign_in_with_twitter"
            android:textAlignment="center"/>


    </LinearLayout>


</LinearLayout>