<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_page_activity_drawer_layout"
    android:fitsSystemWindows="false"
    tools:openDrawer="start"
    tools:context=".Activities.HomePageActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_page_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolBarStyle"
            app:titleTextColor="@android:color/white"
            app:subtitleTextColor="@android:color/black"/>


        <!-- FrameLayout for our fragments -->
        <FrameLayout
            android:id="@+id/home_page_activity_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4.5"
        android:orientation="horizontal"
        android:gravity="bottom">

        <!-- BUTTON MAP -->
        <Button
            android:id="@+id/home_page_activity_map_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop= "@drawable/baseline_map_black_24"
            android:text="@string/map_view"
            android:textSize="9dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <!-- BUTTON LIST VIEW -->
        <Button
            android:id="@+id/home_page_activity_list_view_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop= "@drawable/baseline_view_list_black_24"
            android:text="@string/list_view"
            android:textSize="9dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <!-- BUTTON WORKMATES -->
        <Button
            android:id="@+id/home_page_activity_workmates_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop= "@drawable/baseline_people_black_24"
            android:text="@string/workmate"
            android:textSize="9dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>
    </LinearLayout>


    <!-- 2 | NavigationView -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/home_page_activity_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimarylight"
        app:itemTextColor="@android:color/white"
        app:itemIconTint="@android:color/white"
        app:menu="@menu/home_page_activity_mene_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>